[gd_scene load_steps=3 format=2]

[ext_resource path="res://PropertyEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://ImageEdit.gd" type="Script" id=2]

[node name="ImageEdit" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Label" parent="." index="0"]
margin_right = 637.0

[node name="ActiveButton" type="CheckButton" parent="." index="1"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OpenInAsepriteButton" type="Button" parent="." index="2"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
text = "Open in Aseprite"
[connection signal="toggled" from="ActiveButton" to="." method="_on_ActiveButton_toggled"]
[connection signal="pressed" from="OpenInAsepriteButton" to="." method="_on_OpenInAsepriteButton_pressed"]
